style: add scroll-behavor in media screen min 1024px

--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -1388,6 +1388,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media screen and (min-width: 1024px) {
+  html, body {
+    scroll-behavior: smooth;
+  }
+
   .C-menu {
     align-items: center;
     justify-content: space-between;
