--- a/base_template/global/partials/_menu.html
+++ b/base_template/global/partials/_menu.html
@@ -12,7 +12,7 @@
     <div class="C-menu__menu">
         <button class="C-menu__button center_flex_row">
             <span class="material-symbols-outlined material-icons md-48 C-menu__span">
-                menu_open
+                menu
             </span>
         </button>
         <nav class="C-menu__nav is_hidden">
