test: updating tests

--- a/author/templates/author/partials/_buttons_actions_services.html
+++ b/author/templates/author/partials/_buttons_actions_services.html
@@ -1,6 +1,6 @@
 <!-- buttons for edit and delete object -->
 <div class="C-buttons__actions">
-    <a href="{% url 'author:service' service.id %}"><span class="material-symbols-outlined C-buttons_view__span C-buttons_view__edit">edit</span></a>
+    <a href="{% url 'author:service_edit' service.id %}"><span class="material-symbols-outlined C-buttons_view__span C-buttons_view__edit">edit</span></a>
     <span class="C-buttons_view__span C-buttons__delete_form">
         <form
             action="{% url 'author:service_delete' service.id %}"
