--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -402,6 +402,67 @@ body::-webkit-scrollbar-thumb {
   z-index: 1;
 }
 
+.C-pre_gallery_wrapper {
+  display: flex;
+  width: 100%;
+  max-width: 450px;
+  position: relative;
+  color: #343F4F;
+  cursor: pointer;
+}
+
+.C-pre_gallery_wrapper span {
+  position: absolute;
+  top: 50%;
+  font-size: 25px;
+  background: #fff;
+  padding: 5px;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+  z-index: 100000;
+}
+
+.C-pre_gallery_wrapper span:active {
+  transform: translateY(-50%) scale(0.9);
+}
+
+.C-pre_gallery_wrapper span:hover {
+  background-color: #f2f2f2;
+}
+
+.C-pre_gallery_wrapper span:first-child {
+  left: 0px;
+  display: none;
+}
+
+.C-pre_gallery_wrapper span:last-child {
+  right: -2px;
+}
+
+.C-pre_gallery_carousel {
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+}
+
+.C-pre_gallery_carousel.dragging {
+  cursor: grab;
+  scroll-behavior: auto;
+}
+
+.C-pre_gallery_carousel.dragging img {
+  pointer-events: none;
+}
+
+.C-pre_gallery_carousel img {
+  height: 340px;
+  object-fit: cover;
+  user-select: none;
+  width: 100%;
+}
+
 .C-pre_gallery {
   background-color: var(--standard-white);
   background-image: url('../images/bg-parallax-pre-gallery.jpg');
@@ -415,65 +476,6 @@ body::-webkit-scrollbar-thumb {
 
 .C-pre_gallery_box {
   flex-direction: column;
-}
-
-.C-pre_gallery_images {
-  max-width: 400px;
-  position: relative;
-}
-
-.C-pre_gallery_ul {
-  list-style-type: none;
-}
-
-.C-pre_gallery_li > input {
-  display: none;
-}
-
-.C-pre_gallery_li > label {
-  display: block;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background-color: var(--standard-white);
-  border: 1px solid var(--standard-gray);
-  cursor: pointer;
-  position: absolute;
-  bottom: 15px;
-  z-index: 10;
-}
-
-.C-pre_gallery_li:nth-of-type(1) > label {
-  left: 40%;
-}
-
-.C-pre_gallery_li:nth-of-type(2) > label {
-  left: 50%;
-}
-
-.C-pre_gallery_li:nth-of-type(3) > label {
-  left: 60%;
-}
-
-.C-pre_gallery_li input:checked ~ label {
-  background-color: var(--blue-3);
-  border: 1px solid var(--blue-3);
-}
-
-.C-pre_gallery_li img {
-  width: 100%;
-  max-height: 350px;
-  transition: all 300ms ease;
-  box-shadow: 0 8px 25px var(--std-white-transparent);
-  display: none;
-}
-
-.C-pre_gallery_li input:checked ~ img {
-  display: block;
-  animation-name: to-role;
-  animation-duration: 600ms;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
 }
 
 .C-pre_gallery_description {
@@ -1334,6 +1336,19 @@ body::-webkit-scrollbar-thumb {
 
   .C-modal__c_image {
     max-width: 45vw;
+  }
+
+  .C-pre_gallery_wrapper span {
+    font-size: 36px;
+    padding: 10px;
+  }
+  
+  .C-pre_gallery_wrapper span:first-child {
+    left: -22px;
+  }
+  
+  .C-pre_gallery_wrapper span:last-child {
+    right: -22px;
   }
 }
 
