--- a/base_template/global/partials/_footer.html
+++ b/base_template/global/partials/_footer.html
@@ -2,11 +2,11 @@
 
 <div class="C-footer__details">
     <a class="C-footer__link" href="{% url 'author:login' %}">
-        <p class="C-footer__title">{{ home_content.adress.name }}</p>
+        <p class="C-footer__title">{{ adress.name }}</p>
     </a>
-    <p class="C-footer__adress">{{ home_content.adress.adress }}</p>
-    <p class="C-footer__adress">{{ home_content.adress.city }}</p>
-    <p class="C-footer__adress">{{ home_content.adress.postal }}</p>
+    <p class="C-footer__adress">{{ adress.adress }}</p>
+    <p class="C-footer__adress">{{ adress.city }}</p>
+    <p class="C-footer__adress">{{ adress.postal }}</p>
     <p class="C-footer__copy"> &copy; 2023 - Todos os direitos reservados</p>
 </div>
 <div class="C-footer__logo">
