update: deleted the duplated templates and created a single template for the all settings

--- a/author/templates/author/partials/_settings.html
+++ b/author/templates/author/partials/_settings.html
@@ -1,5 +1,5 @@
 {% extends 'author/pages/dashboard.html' %}
 
 {% block settings %}
-    {% include 'author/partials/_baseform.html' %}
+  {% include 'global/partials/_form.html' %}
 {% endblock %}
