--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -1090,15 +1090,15 @@ input#schedule:checked ~ #schedule_ul {
 .C-schedule_table {
   display: block;
   width: 100%;
-  max-width: fit-content;
   margin-top: 20px;
   border-collapse: collapse;
   font-size: 12px;
   overflow-x: scroll;
+  overflow-y: hidden; 
 }
 
 .C-schedule_table::-webkit-scrollbar {
-  background-color: black;
+  background-color: transparent;
   height: 10px;
 }
 
@@ -1121,7 +1121,6 @@ input#schedule:checked ~ #schedule_ul {
   text-transform: uppercase;
   padding: 5px;
   white-space: nowrap;
-  width: 100%;
 }
 
 .C-schedule_table tr:nth-of-type(even){
@@ -1133,7 +1132,37 @@ input#schedule:checked ~ #schedule_ul {
   text-transform: uppercase;
   padding: 5px;
   white-space: nowrap;
-  width: 100%;
+  width: calc(100% / 4);
+}
+
+
+.C-schedule_form_input {
+  position: relative;
+}
+
+.C-schedule_form_input .button_for_handle_feedback {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width: 30px;
+  height: 30px;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+.C-schedule_table_link {
+  text-decoration: none;
+  color: var(--standard-black);
+  font-weight: bold;
+}
+
+.C-schedule_table_link:hover {
+  text-decoration: underline;
 }
 /* end schedule */
 
