update: updated pagination.html

--- a/base_template/global/partials/pagination.html
+++ b/base_template/global/partials/pagination.html
@@ -1,5 +1,5 @@
 <section class="C-paginator center_flex_row">
-    {% if gallery.has_other_pages %}
+    {% if objects.has_other_pages %}
         <div class="C-pages">
             <div class="C-pages__page center_flex_row">
                 {% if pagination_range.first_page_out_of_range %}
