update: renamed the gallery context to objects

--- a/gallery/templates/pages/gallery.html
+++ b/gallery/templates/pages/gallery.html
@@ -13,7 +13,7 @@
     </div>
     <!-- gallery -->
     <section class="C-gallery center_margin center_flex_row">
-            {% for image in gallery %}
+            {% for image in objects %}
                 <div class="C-gallery__c_image">
                     <img class="C-gallery__image" src="{{ image.cover.url }}" alt="">
                     <h2>{{ image.title }}</h2>
