fix: fixed the error from contact page

--- a/base_template/global/partials/_contact.html
+++ b/base_template/global/partials/_contact.html
@@ -2,7 +2,7 @@
 
 <!-- contact -->
 <section class="C-header_contact center_flex_row">
-    <a target="_blank" href="{{ home_content.social_network.instagram_link }}"><img src="{% static 'global/images/icons/instagram_p.png' %}" alt="logo instagram" class="center_flex_row"></a>
-    <a target="_blank" href="{{ home_content.social_network.facebook_link }}"><img src="{% static 'global/images/icons/facebook_p.png' %}" alt="logo facebook" class="center_flex_row"></a>
-    <a target="_blank" href="{{ home_content.social_network.whatsapp_link }}"><img src="{% static 'global/images/icons/whatsapp_p.png' %}" alt="logo whatsapp"class="center_flex_row"></a>
+    <a target="_blank" href="{{ social.instagram_link }}"><img src="{% static 'global/images/icons/instagram_p.png' %}" alt="logo instagram" class="center_flex_row"></a>
+    <a target="_blank" href="{{ social.facebook_link }}"><img src="{% static 'global/images/icons/facebook_p.png' %}" alt="logo facebook" class="center_flex_row"></a>
+    <a target="_blank" href="{{ social.whatsapp_link }}"><img src="{% static 'global/images/icons/whatsapp_p.png' %}" alt="logo whatsapp"class="center_flex_row"></a>
 </section>
